...

    <string name="action_settings">Settings</string>
    <string name="main_new">New</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_task_task_name">Task Name</string>
    <string name="new_task_task_description">Task Description</string>
    <string name="new_task_add">Add</string>
    <string name="error_new_task_name_required">Task name is required</string>
    <string name="task_list_no_tasks_found">No Tasks Found! Please create one.</string>
    <string name="create_a_task">Create A Task</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>

    <string name="info_task_added">Task Added</string>
    <string name="info_task_updated">Task Updated</string>
    <string name="increment">Increment</string>
    <string name="my_title">Toolbar</string>

    <string name="add_text">Add Text</string>

    <string name="info_load_success">Successfully loaded data</string>
    <string name="info_load_failure">Error loading data</string>

    <string name="info_net_connected">Internet is present</string>
    <string name="info_net_disconnected">Internet is not present</string>

    <string name="result_value">This is just a result value</string>
</resources>
...
