...
    <android.support.design.widget.TextInputLayout
        android:id="@+id/new_task_task_desc_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/new_task_task_desc"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_task_task_description"
            android:gravity="top"
            android:singleLine="false"
            android:lines="10"
...
